improve accessibility of the demo

--- a/utilt.ipynb
+++ b/utilt.ipynb
@@ -394,6 +394,8 @@
     "sector_lower = {} # no at least requirement\n",
     "sector_upper = {\n",
     "    # assets below will not join the portfolio, not higher than 0%\n",
+    "    \"us_bond\": 1,\n",
+    "    \"us_equity\": 1,\n",
     "    \"developed_equity\": 0,\n",
     "    \"emerging_equity\": 0,\n",
     "    \"hedge_fund\": 0,\n",
@@ -506,6 +508,8 @@
     "sector_lower = {} # no at least requirement\n",
     "sector_upper = {\n",
     "    # assets below will not join the portfolio, not higher than 0%\n",
+    "    \"us_bond\": 1,\n",
+    "    \"us_equity\": 1,\n",
     "    \"developed_equity\": 0,\n",
     "    \"emerging_equity\": 0,\n",
     "    \"hedge_fund\": 0,\n",
